--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ matrix:
     env:
     - QMAKE_SPEC=linux-g++
     - QT_SELECT="opt-qt512"
+    - MAKE="make --jobs"
     compiler: gcc
 
   - os: linux
@@ -25,6 +26,7 @@ matrix:
     env:
     - QMAKE_SPEC=linux-clang
     - QT_SELECT="opt-qt512"
+    - MAKE="make --jobs"
     compiler: clang
 
   - os: linux
@@ -35,8 +37,9 @@ matrix:
         packages:
         - g++-7
     env:
-    - USE_TIDY=TRUE
     - QT_SELECT="opt-qt512"
+    - MAKE="bear make --jobs"
+    - TIDY="../build_scripts/linux/run-clang-tidy.sh"
     compiler: clang
 
 before_install:
@@ -62,4 +65,9 @@ install:
   - qtchooser -install opt-qt512 /opt/qt512/bin/qmake
 
 script:
-  - ./build_scripts/linux/build_linux.sh
+  - mkdir -v build
+  - cd build
+  - qmake --version
+  - qmake --spec $QMAKE_SPEC
+  - $MAKE
+  - $TIDY
