Fix circleci mem overflow, remove all but gcc from Travis
Since CircleCI replaces Travis, there's no need for Travis to be doing
the same checks. Travis didn't have an easy way of doing the branching
execution without a script file, which we're trying to replace.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ update_and_install_prereqs: &update_and_install_prereqs
             cd build
             qmake --version
             qmake -spec linux-clang ../
-            bear make --jobs
+            bear make --jobs 2
             ../build_scripts/linux/run-clang-tidy.sh
 
 jobs:
@@ -153,7 +153,7 @@ jobs:
                     cd build
                     qmake --version
                     qmake -spec linux-g++ ../
-                    make --jobs
+                    make --jobs 2
             - run:
                 name: Get qtdeploylinux
                 command: |
